test/errors/nullability/null_coalescing_nonnullable_fail.hy
int main()
{
    int value = 5
    int result = value ?? 10
    return result
}